<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:cardMaxElevation="5dp"
        app:cardUseCompatPadding="true"
        android:backgroundTint="#fff"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/profile_pic_id"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/profile_pic"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/edit_your_profile_picture"
        android:textStyle="italic"
        android:layout_marginBottom="20dp"
        android:textSize="12sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/setup_your_profile"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/set_up_your_profile_to_complete_sign_in_process"
        android:textStyle="italic"
        android:layout_marginBottom="20dp"
        android:textSize="12sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardMaxElevation="5dp"
        app:cardUseCompatPadding="true"
        android:backgroundTint="#F8F4FF"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/enter_name_edt_txt_id"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:inputType="text"
                android:hint="@string/your_name_here"/>

            <EditText
                android:id="@+id/enter_short_status_edt_txt_id"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:inputType="text"
                android:text="@string/ping_now_status"
                android:hint="@string/your_short_status_here"/>

            <Button
                android:id="@+id/setup_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>