<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".OTPActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/otp_verify"
        app:srcCompat="@drawable/verify_otp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/verify_your_otp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/verify_otp_to_complete_sign_in_process"
        android:textStyle="italic"
        android:layout_marginBottom="20dp"
        android:textSize="12sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardMaxElevation="5dp"
        app:cardUseCompatPadding="true"
        android:backgroundTint="#F8F4FF"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/enter_otp_edt_txt_id"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:inputType="number"
                android:hint="@string/your_otp_here"/>

            <Button
                android:id="@+id/verify_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>