<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/signin_img"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_via_phone_number"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/otp_will_be_sent_to_your_phone_number_for_verification"
        android:textStyle="italic"
        android:layout_marginBottom="20dp"
        android:textSize="12sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardMaxElevation="5dp"
        app:cardUseCompatPadding="true"
        android:backgroundTint="#F8F4FF"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/enter_phone_edt_txt_id"
                android:layout_width="330dp"
                android:layout_height="48dp"
                android:inputType="phone"
                android:autofillHints="phone"
                android:hint="@string/your_phone_number_here"/>

            <Button
                android:id="@+id/sign_in_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>